layout and styling fixes, mostly align-items

--- a/drummachine/static/drummachine/main.css
+++ b/drummachine/static/drummachine/main.css
@@ -10,6 +10,10 @@ body {
     width: 100%;
 }
 
+.full-width {
+    width: 100% !important;
+}
+
 .select {
     font-size: 1rem !important;
 }
@@ -62,7 +66,7 @@ body {
 .input-dark {
     display: flex;
     justify-content: center;
-    align-content: center;
+    align-items: center;
     background-color: #292929;
     border-color: transparent;
     width: auto;
@@ -86,19 +90,20 @@ body {
     display: flex;
     flex-direction: column;
     justify-content: center;
-    align-content: center;
+    align-items: center;
     background-color: #363636;
     flex-wrap: wrap;
     margin: 2rem 2rem 0rem 2rem;
     border-top-left-radius: 10px;
     border-top-right-radius: 10px;
+    padding: 2rem;
 }
 
 .options {
     display: flex;
     flex-direction: row;
     justify-content: center;
-    align-content: center;
+    align-items: center;
 }
 
 .top-controls {
@@ -106,23 +111,22 @@ body {
     flex-direction: row;
     flex-wrap: wrap;
     justify-content: space-around;
-    align-content: center;
+    align-items: center;
 }
 
 .instrument-list-container {
     display: flex;
     flex-direction: column;
     justify-content: center;
-    align-content: center;
+    align-items: center;
     flex-wrap: nowrap;
-    margin: 0rem 1rem;
 }
 
 .instrument-list {
     display: flex;
     flex-direction: column;
     justify-content: center;
-    align-content: center;
+    align-items: center;
     flex-wrap: nowrap;
     width: 100%;
     background: #292929;
@@ -142,12 +146,11 @@ body {
     display: flex;
     flex-direction: row;
     justify-content: space-between;
-    align-content: center;
+    align-items: center;
     background: #ADADAD;
     border-radius: 10px;
     width: 100%;
     padding-left: 0.5rem;
-    margin-bottom: 1rem;
 }
 
 .machine-container {
@@ -155,18 +158,19 @@ body {
     display: flex;
     flex-direction: column;
     justify-content: space-around;
-    align-content: center;
+    align-items: center;
     width: auto;
     margin: 0rem 2rem;
     border-bottom-left-radius: 10px;
     border-bottom-right-radius: 10px;
+    padding: 2rem;
 }
 
 .drum-machine {
     display: flex;
     flex-direction: column;
     justify-content: space-around;
-    align-content: center;
+    align-items: center;
     border-radius: 5px;
     border-color: #292929;
     background-color: #292929;
@@ -245,7 +249,7 @@ body {
 .name-container {
     display: flex;
     justify-content: center;
-    align-content: center;
+    align-items: center;
     width: 100%;
 }
 
@@ -322,20 +326,20 @@ body {
     display: flex;
     flex-direction: column;
     justify-content: center;
-    align-content: center;
+    align-items: center;
 }
 
 .loading-icon {
     opacity: 1;
     display: flex;
     justify-content: center;
-    align-content: center;
+    align-items: center;
 }
 
 .loading-text {
     display: flex;
     justify-content: center;
-    align-content: center;
+    align-items: center;
     padding: 0.15rem;
     font-size: 4rem;
     font-weight: 700;
@@ -347,9 +351,9 @@ body {
     display: flex;
     flex-direction: column;
     justify-content: space-around;
-    align-content: center;
-    width: auto;
-    margin: 0rem 2rem;
+    align-items: center;
+    width: 100%;
+    
     border-bottom-left-radius: 10px;
     border-bottom-right-radius: 10px;
     padding: 1rem;
@@ -360,17 +364,18 @@ body {
     display: flex;
     flex-direction: row;
     justify-content: space-between;
-    align-content: center;
+    align-items: center;
     color: #333333;
     margin-top: 1rem;
     border-radius: 10px;
+    padding: 0.5rem 1rem;
+    width: 100%;
 }
 
 .user-name {
     display: flex;
     justify-content: center;
-    align-content: center;
-    min-height: 100%;
+    align-items: center;
 }
 
 @media only screen and (max-width: 767px) {
